Add placeholder files for team pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
       <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 onclick="alertFunction()">Test</h1>
+    <h1>Girls Who Code Baltimore: Anti-Bulling Website Project</h1>
+    <ul>
+      <li>
+        <a href="team_1.html">team one's page</a>
+      </li>
+      <li>
+        <a href="team_2.html">team two's page</a>
+      </li>
+      <li>
+        <a href="team_3.html">team three's page</a>
+      </li>
+      <li>
+        <a href="team_4.html">team four's page</a>
+      </li>
+    </ul>
   </body>
   <script src="main.js"></script>
 </html>
