Add WIP version of team four's work

--- a/team_4.html
+++ b/team_4.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-      <meta charset="UTF-8">
-      <title></title>
-      <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Thimble Sample</title>
+    <link rel="stylesheet" href="css/team_four_styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   </head>
   <body>
-    <h1>Team four's page placeholder</h1>
-  </body>
-  <script src="main.js"></script>
+    <h1>Bullying Stats</h1>
+
+ <div class="section">
+   <h2>What Is Bullying</h2>
+   <h4>Bullying is harming or making fun of others mentally or physically over and over again</h4>
+ </div>
+
+<div class="stats">
+  <h2> 😩 Types Of Bullying 😄 </h2>
+    <ul>
+      <li> Physical Bullying  </li>
+      <li>Verbal Bullying</li>
+      <li>Social Bullying</li>
+      <li>Cyber Bullying</li>
+    </ul>
+
+   <p1></p1>
+    <h2>👇Example👇</h2>
+
+    <iframe width="400" height="300"  class ="center" src="https://www.youtube.com/embed/f4PildXpg_A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
+
+</body>
 </html>
