--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8">
       <title></title>
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Girls Who Code Baltimore: Anti-Bulling Website Project</h1>
@@ -18,9 +18,9 @@
         <a href="team_3.html">team three's page</a>
       </li>
       <li>
-        <a href="team_4.html">team four's page</a>
+        <a href="team_4.html">Bullying Stats (team four's page)</a>
       </li>
     </ul>
   </body>
-  <script src="main.js"></script>
+  <script src="javascript/main.js"></script>
 </html>
