Add team one progress

--- a/team_1.html
+++ b/team_1.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- TO-DO:
+* Transfer links
+-->
+<html>
   <head>
-      <meta charset="UTF-8">
-      <title></title>
-      <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BLOCK</title>
+    <link rel="stylesheet" href="css/team_one_styles.css">
   </head>
   <body>
-    <h1>Team one's page placeholder</h1>
+    <h1>Welcome to B.L.O.C.K</h1>
+    <p>
+      Have you ever been<strong> bullied </strong> by a "friend", family member, co-worker, or someone online?
+
+    </p>
   </body>
-  <script src="main.js"></script>
 </html>
+
+<p> Well we can help, at B.L.O.C.K we incourage people that have been bullied to speak out so we can help manage stressful situations.</p>
+
+<body>
+  <p>If you didn't know, B.L.O.C.K means <strong>Bulling Hurts Lives for other people to Collect Knowledge and mindfulness</strong> also the meaning behind is blocking bullies and helping overcome you bully past.</p>
+
+  <img id="stop" src="images/stop.jpg"/>
+
+  <body><p> We have alot of ways that you can help you with your bullying problems. For example, you could tell a person that you are getting bullied by a person.</p></body>
+
+  <h2>You are not <strong> alone </strong></h2>
+
+  <p>You are not the only one that's being bullied. There are many people that are being bullied. It might be because of anything, but no matter what <strong> do not bully anyone for any reason.</strong></p>
+
+  <p> Something that you can do if you see someone getting bullied is caring for them or even standing up for them. please remember that<strong> you can always do something.</strong></p>
+
+  <img id="walk" src="images/walk%20alone.jpg"/>
+
+  <p class="warning">Warning! the video below contains swearing. If you're sensitive about swearing, then don't watch the video.</p>
+
+
+
+  <iframe
+      id="ytplayer" type="text/html" width="640"   height="360"
+      src="https://www.youtube.com/embed/WpT_pbELCFc"
+      frameborder="0">
+  </iframe>
