Add team two progress

--- a/team_2.html
+++ b/team_2.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-      <meta charset="UTF-8">
-      <title></title>
-      <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Safe Zone</title>
+    <link rel="stylesheet" href="css/team_two_styles.css">
   </head>
   <body>
-    <h1>Team two's page placeholder</h1>
+    <div class="overlay">
+      <h1><center>Safe Zone</center></h1>
+      <div class="content">
+        <h2>What is Safe Zone?</h2>
+        <p>Safe Zone is a place designed to help teenagers going through depression and bullying. Designed by fellow peers that know what your going through and want to help you. This website is meant as a safe space for teenagers who feel there is nothing else of no one else they can turn to.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <img src="giphy.gif" atl= "sponge" class=center  >
+
+        <h2>About Us</h2>
+        <p>Our first thought in creating this website was "What would/did help us in our time of need and how can we bring this to others?" Combined with the different architect from each designer, each page is unique and dealt with specfic problems fellow teenagers go through on a daily bases. This website will provide help that you can't find anywhere else. It's designed to help and not to destroy, this website is suppose to built to you into old self.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>How We Can Help</h2>
+        <p>Safe Zone is designed to detrmine the type of help you need, and to proivde you with resources and tools for you. Our resources includes calming exercises, help hotlines, and stress relievers.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+
+        <h2>Videos</h2>
+        <ul>How Stress Effects Your Body</ul>
+        <ul>What is Stress?</ul>
+
+        <iframe width="800" height="450" src="https://www.youtube.com/embed/dERu8051t4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <h2>What causes stress??</h2>
+
+        <p class=wcs>What Causes Stress?
+          Stress is different for everyone. What stresses you out may not even bother your best friend and vice versa.
+
+          Still, your bodies react the same to stressors. That’s because the stress response is your body’s way of dealing with tough or demanding situations. It causes hormonal, respiratory, cardiovascular, and nervous system changes. For example, stress can make your heart beat faster, make you breathe rapidly, sweat, and tense up. It can also give you a burst of energy.
+
+          This is known as the body’s “fight-or-flight response.” It’s this chemical reaction that prepares your body for a physical reaction because it thinks it’s under attack. This type of stress helped our human ancestors survive in nature.</p>
+
+        <h2>What Is Anixety?</h2>
+      </div>
+    </div>
   </body>
-  <script src="main.js"></script>
 </html>
