Add team three progress

--- a/team_3.html
+++ b/team_3.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-      <meta charset="UTF-8">
-      <title></title>
-      <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Thimble Sample</title>
+    <link rel="stylesheet" href="css/team_three_styles.css">
   </head>
   <body>
-    <h1>Team three's page placeholder</h1>
+    <h1><align>Shooting To Safety</align></h1>
+    <p>What is Shooting to Safety?</p>
+    <p>Shooting To Safety is a website, that was constructed to bring awareness to school shootings, and facts to both parents, students, and teachers to be prepared and informed if they are ever in an active shooting situation.</p>
+
+    <br>
+    <br>
+    <p>
+      <strong>
+        Did you know:There have Been 1,300 SCHOOL SHOOTING INCIDENTS SINCE 1970?
+      </strong>
+    <p>
+    <ul><li>2018 had the greatest number of incidents since 1970, with 82 recorded incidents. The next highest year was 2006 with 59 incidents.</li></ul>
+
+    <ul><li>2018 was the highest year for the number of victims killed, including the shooter, with 51 killed.</li></ul>
+
+    <ul><li>94 school gun violence incidents this year-(2018) a record high since 1970, which is as far back as the data goes, and 59% percent higher than the previous record of 54% in 2006.</li></ul>
+    <br>
+    <br>
+
+
+
+  <p><strong>Facts about Shooters and When and How Shootings Occur</strong><ul><li>  Most school shootings occured in the morning.
+
+
+
+  <ul><li>699 incidents occured outside on school property and 588 Occured inside the school building.</li></ul>
+
+    <ul><li>Most mass shootings happen in High-Schools</li></ul>
+
+    <ul><li>California,Texas and Florida are the top three states in the U.S with the most incidents.</li></ul>
+    <br>
+    <br>
+
+    <p><strong>K-12 School Shooting Stats</strong>
+
+      <ul><li> In 691 incidents,the shooter was a current student at the school.</li></ul>
+
+    <ul><li>In 1,130 incidents,there has one shooter.</li></ul>
+
+   <ul><li> The shooter was male in 1,129 incidents and female in 57.</li></ul>
+   <ul><li>In 1,130 incidents, there was one shooter.</li></ul>
+    <ul><li>There were 29 incidents where the shooter was a police officer.</li></ul>
+    <p><strong>Videos</strong></p>
+    <iframe width="700" height="442" src="https://www.youtube.com/embed/ska0nG8U_Jc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <iframe width="700" height="444" src="https://www.youtube.com/embed/4rl-XCQev1g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+    </p>
   </body>
-  <script src="main.js"></script>
 </html>
