Update link names

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Girls Who Code Baltimore: Anti-Bulling Website Project</h1>
     <ul>
       <li>
-        <a href="team_1.html">team one's page</a>
+        <a href="team_1.html">B.L.O.C.K (team one's page)</a>
       </li>
       <li>
-        <a href="team_2.html">team two's page</a>
+        <a href="team_2.html">Safe Zone (team two's page)</a>
       </li>
       <li>
-        <a href="team_3.html">team three's page</a>
+        <a href="team_3.html">School Shooting (team three's page)</a>
       </li>
       <li>
         <a href="team_4.html">Bullying Stats (team four's page)</a>
